lens/tests/ui/fail/tuple_struct.rs
use lens::Lenses;

#[derive(Lenses)]
struct Tuple(u32);

fn main() {}
