lens/tests/ui/fail/tuple_struct.stderr
error: `#[derive(Lenses)]` may only be applied to structs with named fields
 --> tests/ui/fail/tuple_struct.rs:4:1
  |
4 | struct Tuple(u32);
  | ^^^^^^^^^^^^^^^^^^
